# Poseidon-RAG

./: Data_Preprocessing.ipynb  MCP_DOCUMENTATION.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  main.py  pyproject.toml  rag_setup.py  requirments.txt  view_data.ipynb
Backend/: DataPreprocessing.ipynb  Data_Preprocessing.ipynb  LICENSE  LangGraph_Bot.py  main.py  mcp_server.py  pyproject.toml  rag_setup.py  requirments.txt  test_agent.py
Backend/data/: 20230601_prof.nc  Argo-Agent-Testing.csv
Backend/data/argo_vector_db/: chroma.sqlite3
Frontend/react-app/: package-lock.json  package.json
Frontend/react-app/src/: App.jsx  ChatLayout.jsx  CsvLayout.jsx  MapLayout.jsx
data/: argo_data.db
data/argo_vector_db/: chroma.sqlite3
