[project]
name = "poseidon-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argopy>=1.4.0",
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "matplotlib>=3.11.0",
    "netcdf4>=1.7.4",
    "xarray>=2025.9.0",
]
