[project]
name = "poseidon-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argopy>=1.4.0",
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.6",
    "matplotlib>=3.11.0",
    "mcp>=1.28.0",
    "netcdf4>=1.7.4",
    "sentence-transformers>=5.6.0",
    "sqlparse>=0.5.5",
    "uvicorn>=0.49.0",
    "xarray>=2025.9.0",
]
